@@ -14,7 +14,6 @@ import javax.lang.model.element.Modifier;
 import java.io.File;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.Collections;
 import java.util.List;
 
 public final class VillagerProfessionGenerator extends MinestomCodeGenerator {
@@ -201,7 +200,7 @@ public final class VillagerProfessionGenerator extends MinestomCodeGenerator {
 
         // Write files to outputFolder
         writeFiles(
-                Collections.singletonList(
+                List.of(
                         JavaFile.builder("net.minestom.server.entity.metadata.villager", villagerProfessionClass.build())
                                 .indent("    ")
                                 .skipJavaLangImports(true)
