@@ -2,6 +2,7 @@ package net.minestom.server.network.packet.server.play;
 
 import net.kyori.adventure.text.Component;
 import net.minestom.server.adventure.ComponentHolder;
+import net.minestom.server.crypto.PlayerPublicKey;
 import net.minestom.server.entity.GameMode;
 import net.minestom.server.network.packet.server.ComponentHoldingServerPacket;
 import net.minestom.server.network.packet.server.ServerPacket;
@@ -81,7 +82,7 @@ public record PlayerInfoPacket(@NotNull Action action,
                 }
                 return components;
             default:
-                return Collections.emptyList();
+                return List.of();
         }
     }
 
@@ -128,7 +129,8 @@ public record PlayerInfoPacket(@NotNull Action action,
     }
 
     public record AddPlayer(UUID uuid, String name, List<Property> properties, GameMode gameMode, int ping,
-                            Component displayName) implements Entry, ComponentHolder<AddPlayer> {
+                            @Nullable Component displayName,
+                            @Nullable PlayerPublicKey playerPublicKey) implements Entry, ComponentHolder<AddPlayer> {
         public AddPlayer {
             properties = List.copyOf(properties);
         }
@@ -137,7 +139,8 @@ public record PlayerInfoPacket(@NotNull Action action,
             this(uuid, reader.readSizedString(),
                     reader.readVarIntList(Property::new),
                     GameMode.values()[reader.readVarInt()], reader.readVarInt(),
-                    reader.readBoolean() ? reader.readComponent() : null);
+                    reader.readBoolean() ? reader.readComponent() : null,
+                    reader.readBoolean() ? new PlayerPublicKey(reader) : null);
         }
 
         @Override
@@ -148,17 +151,19 @@ public record PlayerInfoPacket(@NotNull Action action,
             writer.writeVarInt(ping);
             writer.writeBoolean(displayName != null);
             if (displayName != null) writer.writeComponent(displayName);
+            writer.writeBoolean(playerPublicKey != null);
+            if (playerPublicKey != null) writer.write(playerPublicKey);
         }
 
         @Override
         public @NotNull Collection<Component> components() {
-            return displayName != null ? Collections.singleton(displayName) : Collections.emptyList();
+            return displayName != null ? List.of(displayName) : List.of();
         }
 
         @Override
         public @NotNull AddPlayer copyWithOperator(@NotNull UnaryOperator<Component> operator) {
             return displayName != null ?
-                    new AddPlayer(uuid, name, properties, gameMode, ping, operator.apply(displayName)) : this;
+                    new AddPlayer(uuid, name, properties, gameMode, ping, operator.apply(displayName), playerPublicKey) : this;
         }
 
         public record Property(@NotNull String name, @NotNull String value,
@@ -218,7 +223,7 @@ public record PlayerInfoPacket(@NotNull Action action,
 
         @Override
         public @NotNull Collection<Component> components() {
-            return displayName != null ? Collections.singleton(displayName) : Collections.emptyList();
+            return displayName != null ? List.of(displayName) : List.of();
         }
 
         @Override
